cmake_minimum_required(VERSION 3.7)
project(Wet_Part)

set(CMAKE_C_STANDARD 99)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -pedantic-errors -DNDEBUG")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

set(SOURCE_FILES list.h mtm_ex3.h set.h company.h room.h escaper.h company.c
        room.c escaper.c reservation.h reservation.c escape_technion.h
        utils.c utils.h test_utilities.h room_test.c faculty.c faculty.h)
add_executable(Wet_Part ${SOURCE_FILES})

target_link_libraries(Wet_Part ${CMAKE_SOURCE_DIR}/libmtm.a)